--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body style=" background-image: url('https://thumbs.dreamstime.com/b/big-set-various-makeup-products-accessories-kraft-paper-background-make-up-table-top-view-flat-lay-big-set-various-172089655.jpg');">
   
-    <marquee behavior="scroll" direction="left" scrollamount="20" ><h1 style="text-align:center;margin-top:50px;margin-bottom:20px;background-color :blue;color: white;"> 🌈👀💄👌😊MAKEUP PRODUCTS🌈👀💄👌😊 </h1>
+    <marquee style="background-color :blue; text-align:center;margin-top:50px;margin-bottom:20px;" behavior="scroll" direction="left" scrollamount="20" ><h1 style="color: white;"> 🌈👀💄👌😊MAKEUP PRODUCTS🌈👀💄👌😊 </h1>
         
         </marquee>
     
